--- a/style.css
+++ b/style.css
@@ -42,3 +42,14 @@ main {
 #c {
 	grid-area: c;
 }
+
+h1 {
+	font-size: 2rem;
+
+	@media (width >= 40em) {
+		font-size: 3rem;
+	}
+	@media (width >= 60em) {
+		font-size: 4rem;
+	}
+}
